hphp/test/slow/protected_internal/property_protected_visibility.php.expectf
Fatal error: Cannot access protected property A::$foo in %s on line 8
